dice render complete

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
     <meta name="author" content="Racer242">
   </head>
   <body>
-    <header>
-      <h1>Dice 3D demo</h1>
+    <div id="dice3d"></div>
   </body>
 </html>
