make scene as class

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Racer242">
   </head>
   <body>
-    <div id="dice3d"></div>
+    <div id="gameBox">
+      <div id="dice3d"></div>
+    </div>
   </body>
 </html>
