--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         background-color: #ccc;
         transform: translateX(-50%);
         cursor: pointer;
+        visibility: hidden;
       }
 
       #clickArea {
@@ -83,7 +84,7 @@
       </div>
     </div>
     </div>
-    <div id="startButton"></div>
+    <div id="startButton">Еще раз!</div>
 
   </body>
 </html>
