get content from response

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,14 @@
 
     <style>
 
+      @font-face {
+        font-family: 'Dolce Caffe';
+        src: url('./static/font/DolceCaffe-Regular.woff2') format('woff2'),
+             url('./static/font/DolceCaffe-Regular.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
 
       #gameBox {
         position: absolute;
@@ -65,6 +73,11 @@
         background-image: url(./images/content/star-rotate.png);
       }
 
+      #prizeTitle {
+        font-family: 'Dolce Caffe';
+        font-size: 64px;
+        color: #6A1485;
+      }
 
     </style>
 
