--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,15 @@
 
     <style>
 
+      body {
+        margin: 0;
+        background-color: #fff;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+
+      }
+      
       @font-face {
         font-family: 'Dolce Caffe';
         src: url('./static/font/DolceCaffe-Regular.woff2') format('woff2'),
